--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2
-djangorestframework==3.14.0
-psycopg2-binary==2.9.6
+django-ckeditor==6.7.0
 django-cors-headers==3.14.0
+djangorestframework==3.14.0
 gunicorn==21.2.0
 pillow==11.2.1
+psycopg2-binary==2.9.6
