--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "react-final-form": "^7.0.0",
-    "final-form": "^5.0.0",
-    "@mui/material": "^7.1.2",
-    "@mui/icons-material": "^7.1.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "final-form": "^5.0.0",
     "prop-types": "^15.8.1",
-    "clsx": "^2.1.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-final-form": "^7.0.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
