--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-final-form": "^7.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
