--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,8 +40,8 @@ services:
       - ./frontend:/app
     ports:
       - "3000:3000"
-    environment:
-      - REACT_APP_API_BASE_URL=http://localhost:8000/api/
+    env_file:
+      - .env
     depends_on:
       - backend
 
